feat: experiment schema propagation